--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,38 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='gradient1' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%238e2de2;stop-opacity:1'/><stop offset='100%' style='stop-color:%234a00e0;stop-opacity:1'/></linearGradient></defs><circle cx='50' cy='50' r='48' fill='url(%23gradient1)' stroke='%23fff' stroke-width='4'/><text x='50' y='55' font-family='Montserrat, Arial, sans-serif' font-size='24' fill='%23ffffff' text-anchor='middle' alignment-baseline='middle' font-weight='700'>NT</text></svg>" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="My portfolio website showcasing my skills, projects, and experience as a front-end developer." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
-
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <!-- Manifest for web app installation -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>React App</title>
+  <!-- Open Graph Meta Tags for social sharing -->
+  <meta property="og:title" content="Nikita Tsilosani Portfolio" />
+  <meta property="og:description" content="Explore my work, skills, and projects as a front-end developer." />
+  <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+  <meta property="og:url" content="https://my-portfolio.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Nikita Tsilosani Portfolio" />
+  <meta name="twitter:description" content="Explore my work, skills, and projects as a front-end developer." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
+
+  <title>Nikita Tsilosani - Front-End Developer Portfolio</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <!-- Scripts -->
+  <!-- Include any tracking or analytics scripts here, ensuring user consent is respected -->
 </body>
 
 </html>
